--- a/css/style.css
+++ b/css/style.css
@@ -123,10 +123,19 @@ h1,h2,h3,h4,h5,h6{
 .banner .container-fluid{
 	padding: 0px;
 }
-.banner .carousel-indicators [data-bs-target]{
-	background: #00bc9c;
-	background-clip: padding-box;
+.carousel-indicators .active{
+  background: #00bc9c;
+  height: 3px;
+  border-top: 0px solid transparent !important;
+  border-bottom: 0px solid transparent !important;
+  
 }
+.carousel-indicators [data-bs-target]{
+  border-top: 0px solid transparent !important;
+  border-bottom: 0px solid transparent !important;
+}
+
+
 .banner .carousel-caption{
 	bottom: 30%;
 }
